<resources>
    <string name="app_name">Mega Telekom</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="loading_text">Yükleniyor…</string>

    <string name="group_header_1">İştirakler</string>
    <string name="group_header_2">İş Ortakları</string>
    <string name="group_header_3">Hakkında</string>
    <string name="group_header_4">İletişim</string>

    <string name="option_1">Sabit Telefon Hizmetleri</string>
    <string name="option_2">Mega Carrier</string>
    <string name="option_3">Arama Kartı</string>
    <string name="option_4">Bilinmeyen Numaralar</string>
    <string name="option_5">Çağrı Merkezi</string>
    <string name="option_6">TelMy</string>
    <string name="option_7">Yurtdışı Merkezli Şirketlerimiz</string>
    <string name="option_8">Türkiye Merkezli Şirketlerimiz</string>
    <string name="option_9">Partnerler</string>
    <string name="option_10">Referanslar</string>
    <string name="option_11">Şirket Profili</string>
    <string name="option_12">Network Altyapısı</string>
    <string name="option_13">İletişim</string>

    <string name="all_rights_reserved">Mega Telekom © 2017</string>

    <string name="exit_the_app">Çıkmak için geri tuşuna tekrar basın.</string>
    <string name="file_read_error">Dosya okunurken bir hata oluştu.</string>
    <string name="url_not_found_error">Sayfa adresi bulunamadı.</string>
    <string name="font_not_found_error">Font yüklenirken bir sorun oluştu.</string>
    <string name="credit">Credit: Nuh Koca</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="website_is_opening">Sayfa açılıyor...</string>

</resources>
